# pic-prototyping

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  README.md  SECURITY.md  Taskfile.yml
fixtures/workload-credentials-test-keys/archive/: credential.vc.json  did.json  private.jwk  public.jwk
fixtures/workload-credentials-test-keys/gateway/: credential.vc.json  did.json  private.jwk  public.jwk
fixtures/workload-credentials-test-keys/nomad-audit/: credential.vc.json  did.json  presentation.vp.json  private.jwk  public.jwk
fixtures/workload-credentials-test-keys/nomad-trustplane/: cat-key.private.jwk  cat-key.public.jwk  credential.vc.json  did.json  issuer-key.private.jwk  issuer-key.public.jwk
fixtures/workload-credentials-test-keys/sovereign-archive/: credential.vc.json  did.json  presentation.vp.json  private.jwk  public.jwk
fixtures/workload-credentials-test-keys/sovereign-gateway/: credential.vc.json  did.json  presentation.vp.json  private.jwk  public.jwk
fixtures/workload-credentials-test-keys/sovereign-storage/: credential.vc.json  did.json  presentation.vp.json  private.jwk  public.jwk
fixtures/workload-credentials-test-keys/sovereign-trustplane/: cat-key.private.jwk  cat-key.public.jwk  credential.vc.json  did.json  issuer-key.private.jwk  issuer-key.public.jwk
fixtures/workload-credentials-test-keys/storage/: credential.vc.json  did.json  private.jwk  public.jwk
fixtures/workload-credentials-test-keys/trustplane/: credential.vc.json  did.json  private.jwk  public.jwk
rust-prototyping/: Cargo.toml
rust-prototyping/core/: Cargo.toml
rust-prototyping/core/benches/: serialization.rs
rust-prototyping/core/src/: lib.rs
rust-prototyping/core/src/model/: mod.rs  pca.rs
rust-prototyping/workload-identity-gen/: Cargo.toml
rust-prototyping/workload-identity-gen/src/: identity_gen.rs  main.rs
rust-prototyping/workload-runner/: Cargo.toml
rust-prototyping/workload-runner/benches/: execution_chain.rs
rust-prototyping/workload-runner/src/: main.rs
rust-prototyping/workload-runner/src/workload/: archive.rs  gateway.rs  instrumentation.rs  mod.rs  registry.rs  storage.rs
rust-prototyping/workload-runner/src/workload/sovereign/: archive.rs  cat.rs  gateway.rs  mod.rs  registry.rs  storage.rs
v0.1/fixtures/workload-credentials-test-keys/nomad-audit/: did.json
v0.1/fixtures/workload-credentials-test-keys/nomad-trustplane/: cat-key.private.jwk  did.json  issuer-key.public.jwk
v0.1/fixtures/workload-credentials-test-keys/sovereign-archive/: did.json  presentation.vp.json  public.jwk
v0.1/fixtures/workload-credentials-test-keys/sovereign-gateway/: did.json  presentation.vp.json  private.jwk  public.jwk
v0.1/fixtures/workload-credentials-test-keys/sovereign-storage/: credential.vc.json  presentation.vp.json  private.jwk
v0.1/fixtures/workload-credentials-test-keys/sovereign-trustplane/: cat-key.private.jwk
v0.1/rust-prototyping/: Cargo.toml
v0.1/rust-prototyping/workload-identity-gen/: Cargo.toml
v0.1/rust-prototyping/workload-identity-gen/src/: identity_gen.rs  main.rs
v0.1/rust-prototyping/workload-runner/: Cargo.toml
v0.1/rust-prototyping/workload-runner/benches/: execution_chain.rs
v0.1/rust-prototyping/workload-runner/src/: lib.rs  main.rs
v0.1/rust-prototyping/workload-runner/src/workload/: instrumentation.rs
v0.1/rust-prototyping/workload-runner/src/workload/sovereign/: archive.rs  gateway.rs  mod.rs  registry.rs  storage.rs  trustplane.rs
v0.2/fixtures/: README.md
v0.2/fixtures/attestations/: archive-service.json  backup-service.json  gateway.json  guardrail.json  storage-service.json  summary-service.json
v0.2/fixtures/guardrail/: policy.json  scopes.json
v0.2/fixtures/identities/alice/: did.json  private.jwk
v0.2/fixtures/identities/archive-service/: did.json  private.jwk
v0.2/fixtures/identities/backup-service/: did.json  private.jwk
v0.2/fixtures/identities/enforcement-origin/: did.json  private.jwk
v0.2/fixtures/identities/gateway/: did.json  private.jwk
v0.2/fixtures/identities/guardrail/: did.json  private.jwk
v0.2/fixtures/identities/org-authority/: did.json  private.jwk
v0.2/fixtures/identities/sandbox/: did.json  private.jwk
v0.2/fixtures/identities/snapshot-issuer/: did.json  private.jwk
v0.2/fixtures/identities/storage-service/: did.json  private.jwk
v0.2/fixtures/identities/summary-service/: did.json  private.jwk
v0.2/golang/: README.md  go.mod
v0.2/golang/cmd/genfixtures/: main.go
v0.2/golang/cmd/picdemo/: bench.go  exec.go  flow.go  (+2 more)
v0.2/golang/fixtureset/: load.go
v0.2/golang/pic/: authority.go  bench_test.go  crypto.go  guardrail.go  pic_test.go  prover.go  revocation.go  sandboxed.go  snapshot.go  types.go  verifier.go
v0.2/golang/scenario/: authoritymixing.go  bench_test.go  confuseddeputy.go  confuseddeputy_test.go  flow.go  guardrail.go  scenario_test.go
v0.2/rust/: Cargo.toml  README.md
v0.2/rust/benches/: pic_bench.rs
v0.2/rust/src/: authority.rs  crypto.rs  fixtureset.rs  guardrail.rs  lib.rs  prover.rs  revocation.rs  sandboxed.rs  snapshot.rs  types.rs  verifier.rs
v0.2/rust/src/scenario/: authoritymixing.rs  flow.rs  guardrail.rs  mod.rs
v0.2/rust/tests/: pic_tests.rs  scenario_tests.rs
