[workspace]
resolver = "2"
members = [
    "workload-identity-gen",
    "workload-runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nitro Agility Srl"]

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
serde_bytes = "0.11"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# SSI - Decentralized Identity (SpruceID)
ssi = { version = "0.12", features = ["ed25519", "w3c"] }

# PIC
pic-protocol = { version = "0.1.3", features = ["full"] }

# Utilities
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
iref = "3"
static-iref = "3"

# Benchmark
criterion = { version = "0.5", features = ["html_reports"] }
