[package]
name = "core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
serde_bytes.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "serialization"
harness = false