[package]
name = "workload-runner"
version.workspace = true
edition.workspace = true

[lib]
name = "workload_runner"
path = "src/lib.rs"

[[bin]]
name = "workload-runner"
path = "src/main.rs"

[dependencies]
core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio"] }

[[bench]]
name = "execution_chain"
harness = false