[workspace]
resolver = "2"
members = [
    "workload-identity-gen",
    "workload-runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nitro Agility Srl"]

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
serde_bytes = "0.11"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# SSI - Decentralized Identity (SpruceID)
ssi = { version = "0.12", features = ["ed25519", "w3c"] }

# PIC
pic-protocol = { version = "0.1.6", features = ["full"] }

# Utilities
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
iref = "3"
static-iref = "3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
bs58 = "0.5"

# Benchmark
criterion = { version = "0.5", features = ["html_reports"] }

# --- Dependency patch: core2 -------------------------------------------------
# The `core2` crate has been fully yanked from crates.io (every published
# version, 0.0.0 through 0.4.0). Our dependency chain pulls it in transitively:
#   ssi 0.12 -> ssi-ucan 0.2.1 -> libipld 0.14 -> libipld-core 0.14.0 -> core2 ^0.4
# core2 is a non-optional dependency of libipld-core (no feature avoids it), and
# 0.4.0 is the only release in the `^0.4` range, so a fresh resolve fails with
# "0.4.0 is yanked". We redirect core2 to its upstream git source, whose `main`
# still declares version 0.4.0 (with the `alloc` feature libipld-core needs).
# Remove this patch once `ssi` drops the old libipld/ssi-ucan chain.
[patch.crates-io]
core2 = { git = "https://github.com/technocreatives/core2", rev = "545e84bcb0f235b12e21351e0c69767958efe2a7" }
