[package]
name = "workload-identity-gen"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
ssi.workspace = true
chrono.workspace = true
uuid.workspace = true
iref.workspace = true
static-iref.workspace = true
